Update 'go-zvdcahgn' component image to: quay.io/tsscui/go-zvdcahgn:azure-91ac2943af55a3561c141c53dd0dfd1ac0fd64e4

--- a/components/go-zvdcahgn/overlays/development/deployment-patch.yaml
+++ b/components/go-zvdcahgn/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zvdcahgn
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/tsscui/go-zvdcahgn:azure-91ac2943af55a3561c141c53dd0dfd1ac0fd64e4
+          name: container-image
